add axios e modifica header

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,10 +1,43 @@
 header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
-  height: 60px;
+  height: 90px;
   box-sizing: border-box;
   background-color: var(--primary);
   padding: 0 5%;
+}
+
+.soon {
+  text-decoration: none;
+  font-size: 30px;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  position: relative;
+}
+.soon:after {
+  content: "Filmaria";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: scaleY(-1);
+  transform-origin: bottom;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 30%,
+    rgba(0, 0, 0, 0.5) 80%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.favorites {
+  cursor: pointer;
+  text-decoration: none;
+  background-color: var(--secondary);
+  border-radius: 5px;
+  padding: 5px 8px;
+  font-weight: bold;
+  color: black;
 }
